--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -501,7 +501,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </apex:outputText>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:inputText value="{!eventRegistration.Registrant_Company_Organization__c}" id="companyorganization" html-aria-describedby="companyorganization" required="{!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', true, false)}" styleClass="slds-select {!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', 'required', '')} {!IF(contactSet, 'disable', '')}"/>
+                                    <apex:inputText value="{!eventRegistration.Registrant_Company_Organization__c}" id="companyorganization" html-aria-describedby="companyorganization" required="{!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', true, false)}" styleClass="slds-input {!IF(eventPage.Ask_Company_Organization__c == 'Ask and require', 'required', '')} {!IF(contactSet, 'disable', '')}"/>
                                 </div>
                             </div>
                         </apex:outputPanel>
@@ -516,9 +516,11 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </apex:outputText>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:selectList multiSelect="false" value="{!ApplicantType}" id="applicantType" html-aria-describedby="applicantType-required" size="1" styleClass="slds-select" required="{!IF(eventPage.Ask_Applicant_Type__c == 'Ask and require', true, false)}">
-                                        <apex:selectOptions value="{!ApplicantTypeDD}"/>
-                                    </apex:selectList>
+                                    <div class="slds-select_container">
+                                        <apex:selectList multiSelect="false" value="{!ApplicantType}" id="applicantType" html-aria-describedby="applicantType-required" size="1" styleClass="slds-select" required="{!IF(eventPage.Ask_Applicant_Type__c == 'Ask and require', true, false)}">
+                                            <apex:selectOptions value="{!ApplicantTypeDD}"/>
+                                        </apex:selectList>
+                                    </div>
                                 </div>
                                 <div class="slds-form-element__help" id="applicantType-required">
                                     {!IF(eventPage.Ask_Last_Name_As_Student__c == 'Ask and require', 'This field is required', '')}
@@ -555,7 +557,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     </apex:outputText>
                                 </apex:outputLabel>
                                 <div class="slds-form-element__control">
-                                    <apex:input type="date" value="{!birthDateString}" id="dateOfBirth" html-aria-describedby="dateOfBirth-required" styleClass=" slds-input {!IF(!contactSet,'required requiredText', '')} mmddyyyy" disabled="{!contactSet}" required="{!IF(eventPage.Ask_Date_Of_Birth__c == 'Ask and require', true, false)}" html-placeholder="MM/DD/YYYY"/>
+                                    <apex:input type="date" value="{!eventRegistration.Registrant_Date_of_Birth__c}" id="dateOfBirth" html-aria-describedby="dateOfBirth-required" styleClass=" slds-input {!IF(!contactSet,'required requiredText', '')} mmddyyyy" disabled="{!contactSet}" required="{!IF(eventPage.Ask_Date_Of_Birth__c == 'Ask and require', true, false)}" html-placeholder="MM/DD/YYYY"/>
                                 </div>
                                 <div class="slds-form-element__help" id="dateOfBirth-required">
                                     {!IF(eventPage.Ask_Date_Of_Birth__c == 'Ask and require', 'This field is required', '')}
@@ -776,7 +778,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                                         <div class="slds-form-element {!IF(isRequired, 'slds-is-required', '')}">
 
-                                            <apex:outputLabel for="{!'AddInfo' + q}" styleClass="slds-form-element__label">
+                                            <apex:outputLabel styleClass="slds-form-element__label">
                                                 {!eventPage['Add_Info_Question_Text_' + q + '__c']}
                                                 <apex:outputText escape="false" rendered="{!isRequired}">
                                                     <abbr class="slds-required" title="required">*</abbr>
@@ -787,17 +789,17 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                                                 <!--Text area -->
                                                 <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}">
-                                                    <apex:inputText label="{!'AddInfo' + q}" value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-textarea"/>
+                                                    <apex:inputText value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-textarea"/>
                                                 </apex:outputPanel>
 
                                                 <!--Text box-->
                                                 <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'Text box'), true, false)}">
-                                                    <apex:inputTextarea label="{!'AddInfo' + q}" value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-input input-textbox" />
+                                                    <apex:inputTextarea value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-input input-textbox"/>
                                                 </apex:outputPanel>
 
                                                 <!--Pick List-->
                                                 <apex:outputPanel layout="block" styleClass="slds-select_container" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Pick-list'), true, false)}">
-                                                    <apex:selectList label="{!'AddInfo' + q}" value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" size="1" styleClass="slds-select">
+                                                    <apex:selectList value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" size="1" styleClass="slds-select">
                                                         <apex:selectOptions value="{!CASE(q, '1', addPick1, '2', addPick2, '3', addPick3, '4', addPick4, addPick5) }"/>
                                                     </apex:selectList>
                                                 </apex:outputPanel>
