--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -64,7 +64,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </p>
 
                             <!-- Show Selected guest -->
-                            <apex:outputPanel layout="none" rendered="{!IF(guestAnswers.size>0, true, fale)}">
+                            <apex:outputPanel layout="none" rendered="{!IF(guestAnswers.size>0, true, false)}">
                                 <h2 class="slds-text-heading_medium slds-p-top_medium slds-p-bottom_medium slds-clearfix">Additional guest registered</h2>
                                 <apex:variable value="{!0}" var="guestNum"/>
                                 <apex:repeat var="guests" value="{!guestAnswers}">
